--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -12,7 +12,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  background-color: #ffffffa7;
+  background-color: #fff;
   font-family: "Sora";
   z-index: 999;
   padding-left: 12px;
@@ -59,87 +59,83 @@
         cursor: pointer;
       }
     }
-    ul {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
+    .headerClose {
+      right: -100%;
+      animation: hideModal 0.3s forwards;
+      opacity: 1;
       position: fixed;
+      z-index: 99999;
+      width: 100% !important;
+      height: 100vh;
       top: 90px;
-      background-color: #fff !important;
-      left: -150%;
-      right: 0;
-      overflow: hidden;
-      transition: 0.3s linear;
+      padding: 0;
+      padding: 20px 0;
+      background: #fff;
+      color: #000 !important;
+      display: flex !important;
+      flex-direction: column;
+      align-items: center;
+      @media (min-width: 850px) {
+        width: 70% !important;
+      }
+    }
+    .headerOpen {
+      right: 100%;
+      animation: openModal 0.3s forwards;
+      opacity: 1;
+      position: fixed;
+      z-index: 99999;
+      width: 100% !important;
+      height: 100vh;
+      top: 90px;
+      padding: 20px 0;
+      background: #fff;
+      display: flex !important;
+      flex-direction: column;
+      align-items: center;
+      @media (min-width: 850px) {
+        width: 70% !important;
+      }
+
       a {
-        display: flex;
-        position: fixed;
-        width: 100%;
-        transition: 0.3s linear;
-        left: -150%;
-        &:nth-child(1) {
-          top: 90px !important;
-          transition-delay: 0s;
-        }
-        &:nth-child(2) {
-          top: 140px !important;
-          transition-delay: 0.1s;
-        }
-        &:nth-child(3) {
-          top: 190px !important;
-          transition-delay: 0.2s;
-        }
-        &:nth-child(4) {
-          top: 240px !important;
-          transition-delay: 0.3s;
-        }
-        &:nth-child(5) {
-          top: 290px !important;
-          transition-delay: 0.4s;
-        }
-        &:nth-child(6) {
-          top: 340px !important;
-          transition-delay: 0.5s;
-        }
+        display: block;
+        color: #000;
+        font-size: 20px;
+        margin: 10px 0;
+        text-decoration: none;
         li {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          width: 100%;
-          background-color: (#fff);
+          display: block;
+          list-style: none !important;
           margin: 0 !important;
           max-width: none;
-          height: 50px !important;
-        }
-        &.headerOpen {
-          a {
-            left: 0;
-          }
+          height: 30px !important;
         }
       }
-      li {
-        float: left;
-        list-style: none;
-        margin: 15px;
-        font-size: 20px;
-        font-weight: 600;
-        cursor: pointer;
-        color: (#000);
-        @media (max-width: 850px) {
-          float: none;
-          max-width: 200px;
-          text-align: center;
-        }
-      }
+    }
+    a {
+      display: none;
     }
     &__actions {
-      button {
-        background-color: transparent;
-        border: none;
-        outline: none;
-        cursor: pointer;
-        color: (#000);
+      img {
+        margin-right: 10px;
       }
     }
+  }
+}
+
+@keyframes openModal {
+  0% {
+    right: -100%;
+  }
+  100% {
+    right: 0;
+  }
+}
+@keyframes hideModal {
+  0% {
+    right: 0;
+  }
+  100% {
+    right: -100%;
   }
 }
