--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -54,9 +54,8 @@
       }
     }
     &__logo {
-      h1 {
-        color: (#000);
-        cursor: pointer;
+      img {
+        filter: grayscale(200%);
       }
     }
     .headerClose {
@@ -123,10 +122,7 @@
       button {
         background: transparent !important;
         border: none !important;
-        margin-right: 10px !important;
-        i {
-          font-size: 50px !important;
-        }
+        margin-right: 12px !important;
       }
     }
   }
