--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,16 @@
 
 .container {
   max-width: 1200px;
+  padding-right: 10px;
+  padding-left: 10px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.sec-title {
+  text-align: center;
+  font-weight: 900;
+  font-size: 39px;
+  margin: 0 0 40px 0;
+  letter-spacing: 2px;
 }
