--- a/src/components/Hero/style.module.scss
+++ b/src/components/Hero/style.module.scss
@@ -4,6 +4,7 @@
   height: 100vh;
   background-size: cover;
   background-position: bottom;
+  background-attachment: fixed;
 
   .bg {
     width: 100%;
