--- a/src/components/Footer/style.module.scss
+++ b/src/components/Footer/style.module.scss
@@ -8,6 +8,9 @@
   grid-template-columns: repeat(2, 1fr);
   gap: 0;
   align-items: center;
+  .footer_side {
+    width: 100%;
+  }
   span {
     font-weight: bold;
     font-size: 19px;
