--- a/src/components/Gipermarket/style.module.scss
+++ b/src/components/Gipermarket/style.module.scss
@@ -15,7 +15,9 @@
   width: 100%;
   overflow: hidden !important;
   height: 300px;
-  margin: 20px 0;
+  @media (max-width: 850px) {
+    margin: 20px 0;
+  }
   border-radius: 30px;
   img {
     transition: 0.5s all;
